[package]
name = "untitled"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.12"
reqwest = { version = "0.12.22", features = ["cookies", "json"] }
url = "2.5.4"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
urlencoding = "2.1.3"
regex = "1.11.1"
scraper = "0.23.1"
rand = "0.8.5"
async-trait = "0.1.88"
chrono = "0.4.41"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
num_cpus = "1.17.0"
colored = "3.0.0"
tabled = "0.20.0"
clap = "4.5.43"
tempfile = "3.20.0"
criterion = "0.7.0"
wiremock = "0.6.4"
libc = "0.2.174"
